RESOLVED FIXED115379
REGRESSION(r140024): child of fixed div inside of absolute div does not get resized when window is resized
https://bugs.webkit.org/show_bug.cgi?id=115379
Summary REGRESSION(r140024): child of fixed div inside of absolute div does not get r...
Alice Lieutier
Reported 2013-04-29 15:06:14 PDT
Steps to reproduce the problem: 1. resize the browser window to have a narrow window 2. load (or reload) the url (http://lieutier.me/bugs/chrome/fixed.html) 3. resize the window to make it wider What is the expected behavior? The inner div (in lime green) should get resized to be as large as its parent (red div) What went wrong? The inner div does not get resized. Instead, it stays the same width as it was when the page was first opened. Does it occur on multiple sites: Yes Is it a problem with a plugin? No Did this work before? Yes Does this work in other browsers? Yes It works as intended on Safari Version 6.0.4 (7536.29.13) and Firefox, but not on the last webkit.
Attachments
Patch (4.78 KB, patch)
2013-05-06 04:11 PDT, Robert Hogan
no flags
Alice Lieutier
Comment 1 2013-04-30 07:48:39 PDT
FWIW, I also filed this bug on Chromium: http://code.google.com/p/chromium/issues/detail?id=236401
Robert Hogan
Comment 2 2013-05-06 02:02:34 PDT
Robert Hogan
Comment 3 2013-05-06 04:11:15 PDT
Dave Hyatt
Comment 4 2013-05-06 13:29:54 PDT
Comment on attachment 200654 [details] Patch r=me
WebKit Commit Bot
Comment 5 2013-05-06 14:15:53 PDT
Comment on attachment 200654 [details] Patch Clearing flags on attachment: 200654 Committed r149640: <http://trac.webkit.org/changeset/149640>
WebKit Commit Bot
Comment 6 2013-05-06 14:15:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.